@@ -1,3 +1,7 @@
+[B]1.3.1[/B]
+- Fix for url encoder on Unix-like platforms
+- Cosmetics
+
 [B]1.3.0[/B]
 - Added support for rar archives
   > Idea was introduced by ratmole
